# fat

./: Cargo.toml  Extensions.toml  ReadMe.md
docs/: Faq.md  TechDoc.md
src/: components.rs  main.rs  rar.rs  tests.rs  zip.rs
test_files/: sample.rar
