[package]
name = "file_analysis_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.3.0"
time = "0.3.37"
# For providing paths to standard directories according to os rules/conventions
dirs-next = "2.0.0"
# For cli interface
clap = { version = "4.5.23"}
# Cross-platform bindings for GUI interface, bundled libs
fltk = { version = "^1.5", features = ["fltk-bundled"]}
zip = "2.2.2"

