[package]
name = "fat-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.3.0"
time = "0.3.37"
# For cli interface
clap = { version = "4.5.23"}
# Cross-platform bindings for GUI interface, bundled libs
fltk = { version = "^1.5", features = ["fltk-bundled"]}
# To extract metadata from zip files
zip = "2.2.2"
toml = "0.8.19"
serde = "1.0.217"
serde_derive = "1.0.217"
unrar = "0.5.7"

